--- a/report/.settings/org.eclipse.core.resources.prefs
+++ b/report/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding/rptBarcodeRM6.jrxml=UTF-8
 encoding/rptCetakPenilaianAwalFisioterapi.jrxml=UTF-8
 encoding/rptCetakPenilaianAwalMedisRalanRehabMedik.jrxml=UTF-8
+encoding/rptFisikRehabMedik.jrxml=UTF-8
 encoding/rptLembarObat3.jrxml=UTF-8
